--- a/news.html
+++ b/news.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link rel="stylesheet" href="css/styles.css" type="text/css"/>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
         <title>News & Events &mdash; OpenGL</title>
     </head>
@@ -163,30 +164,31 @@
         </div>
         <div class="container my-5">
         </div>
-        <footer class="footer text-dark p-3">
+        <footer class="footer bg-dark text-light p-3">
             <div class="container">
                 <div class="row justify-content-md-center py-2">
                     <div class="col">
-                        <p class="my-0" >Contact Info: </p>
-                        <a href="#" class="text-muted"><img src=""><p class="my-0">Facebook account</p></a>
-                        <a href="#" class="text-muted"><img src=""><p class="my-0">Facebook account</p></a>
-                        <a href="#" class="text-muted"><img src=""><p class="my-0">Facebook account</p></a>
-                        <a href="#" class="text-muted"><img src=""><p class="my-0">Facebook account</p></a>
-                        <a href="#" class="text-muted"><img src=""><p class="my-0">Facebook account</p></a>
+                        <p class="my-0" >Social Media</p>
+                        <a href="https://twitter.com/thekhronosgroup" class="fa fa-twitter text-light"></a>
+                        <a href="#" class="fa fa-youtube text-light"></a>
                     </div>
 
                     <div class="col mb-3">
                         <p class="my-0 mb-3">Sitemap</p>
 
                         <ul class="navbar-nav mr-auto">
-                            <li class="nav-item"><a href="#" class="text-muted">Home</a></li>
-                            <li class="nav-item"><a href="#" class="text-muted">About</a></li>
-                            <li class="nav-item"><a href="#" class="text-muted">Gallery</a></li>
-                            <li class="nav-item"><a href="#" class="text-muted">Publications</a></li>
-                            <li class="nav-item"><a href="#" class="text-muted">News</a></li>
-                            <li class="nav-item"><a href="#" class="text-muted">Events</a></li>
-                            <li class="nav-item"><a href="#" class="text-muted">Contact Us</a></li>
-                            <li class="nav-item"><a href="#" class="text-muted">Apply Now</a></li>
+                            <li class="nav-item"><a href="index.html" class="text-muted">Home</a></li>
+                            <li class="nav-item"><a href="about.html" class="text-muted">About</a></li>
+                            <li class="nav-item"><a href="#" class="text-muted">Resources</a>
+                                <ul class="navbar-nav ml-3">
+                                    <li class="nav-item"><a href="pipeline.html" class="text-muted">OpenGL Rendering Pipeline</a>
+                                    <li class="nav-item"><a href="glut.html" class="text-muted">OpenGL Utility Libraries</a>
+                                    <li class="nav-item"><a href="perfbench.html" class="text-muted">OpenGL Performance Benchmarks</a>
+                                    <li class="nav-item"><a href="faq.html" class="text-muted">Frequently Asked Questions</a>
+                                </ul>
+                            </li>
+                            <li class="nav-item"><a href="news.html" class="text-muted">News</a></li>
+                            <li class="nav-item"><a href="contact.html" class="text-muted">Contact Us</a></li>
                         </ul>
                     </div>
 
@@ -198,6 +200,7 @@
 
                     <div class="col ">
                         <p>Other Contact Info:</p>
+                        <img src="img/khronos-logo-inverted.svg" class="my-3" width="100%">
                         <p class="text-muted">
                         9450 SW Gemini Drive #45043
                         Beaverton, OR 97008-6018 USA<br/>
