--- a/py/tmp_contact.html
+++ b/py/tmp_contact.html
@@ -93,18 +93,20 @@
                         </table>
                     </div>
 
-                    <div class="row my-5">
-                        <div class="col-md-10">
-                            <h3><strong>Technical Support</strong></h3>
-                            <p style="line-height: 2.0em">
-                            If you are looking for hardware that supports a specific Khronos standard such as <strong>OpenGL</strong>, 
-                            please refer to the <a href="faq.html">Frequently Asked Questions</a> page. On this page, choose the Khronos standard in which you are 
-                            interested, then the page will list the products that have been verified to be conformant with that 
-                            standard. Questions about the hardware should be addressed to the hardware manufacturer.
-                            <br/><br/>
-                            <strong>For questions about software</strong>, Khronos is a consortium of companies that defines standards, 
-                            but we do not make any products around them. Instead we maintain the standards which hardware companies 
-                            support with drivers, and which software companies implement in their own products.
+                    <div class="container">
+                        <div class="row my-5">
+                            <div class="col-md-10">
+                                <h3><strong>Technical Support</strong></h3>
+                                <p style="line-height: 2.0em">
+                                If you are looking for hardware that supports a specific Khronos standard such as <strong>OpenGL</strong>, 
+                                please refer to the <a href="faq.html">Frequently Asked Questions</a> page. On this page, choose the Khronos standard in which you are 
+                                interested, then the page will list the products that have been verified to be conformant with that 
+                                standard. Questions about the hardware should be addressed to the hardware manufacturer.
+                                <br/><br/>
+                                <strong>For questions about software</strong>, Khronos is a consortium of companies that defines standards, 
+                                but we do not make any products around them. Instead we maintain the standards which hardware companies 
+                                support with drivers, and which software companies implement in their own products.
+                            </div>
                         </div>
                     </div>
                 </div>
