--- a/contact.html
+++ b/contact.html
@@ -133,18 +133,20 @@
                         </table>
                     </div>
 
-                    <div class="row my-5">
-                        <div class="col-md-10">
-                            <h3><strong>Technical Support</strong></h3>
-                            <p style="line-height: 2.0em">
-                            If you are looking for hardware that supports a specific Khronos standard such as <strong>OpenGL</strong>, 
-                            please refer to the <a href="faq.html">Frequently Asked Questions</a> page. On this page, choose the Khronos standard in which you are 
-                            interested, then the page will list the products that have been verified to be conformant with that 
-                            standard. Questions about the hardware should be addressed to the hardware manufacturer.
-                            <br/><br/>
-                            <strong>For questions about software</strong>, Khronos is a consortium of companies that defines standards, 
-                            but we do not make any products around them. Instead we maintain the standards which hardware companies 
-                            support with drivers, and which software companies implement in their own products.
+                    <div class="container">
+                        <div class="row my-5">
+                            <div class="col-md-10">
+                                <h3><strong>Technical Support</strong></h3>
+                                <p style="line-height: 2.0em">
+                                If you are looking for hardware that supports a specific Khronos standard such as <strong>OpenGL</strong>, 
+                                please refer to the <a href="faq.html">Frequently Asked Questions</a> page. On this page, choose the Khronos standard in which you are 
+                                interested, then the page will list the products that have been verified to be conformant with that 
+                                standard. Questions about the hardware should be addressed to the hardware manufacturer.
+                                <br/><br/>
+                                <strong>For questions about software</strong>, Khronos is a consortium of companies that defines standards, 
+                                but we do not make any products around them. Instead we maintain the standards which hardware companies 
+                                support with drivers, and which software companies implement in their own products.
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -156,8 +158,8 @@
                 <div class="row justify-content-md-center py-2">
                     <div class="col">
                         <p class="my-0" >Social Media</p>
-                        <a href="https://twitter.com/thekhronosgroup" class="fa fa-twitter text-light"></a>
-                        <a href="#" class="fa fa-youtube text-light"></a>
+                        <a href="https://twitter.com/thekhronosgroup" class="m-2 fa fa-twitter p-3 bg-dark text-light"></a>
+                        <a href="https://www.youtube.com/user/khronosgroup" class="m-2 fa fa-youtube p-3 bg-dark text-light"></a>
                     </div>
 
                     <div class="col mb-3">
@@ -167,7 +169,7 @@
                             <li class="nav-item"><a href="index.html" class="text-muted">Home</a></li>
                             <li class="nav-item"><a href="about.html" class="text-muted">About</a></li>
                             <li class="nav-item"><a href="#" class="text-muted">Resources</a>
-                                <ul class="navbar-nav ml-3">
+                                <ul class="navbar-nav ">
                                     <li class="nav-item"><a href="pipeline.html" class="text-muted">OpenGL Rendering Pipeline</a>
                                     <li class="nav-item"><a href="glut.html" class="text-muted">OpenGL Utility Libraries</a>
                                     <li class="nav-item"><a href="perfbench.html" class="text-muted">OpenGL Performance Benchmarks</a>
