--- a/news.html
+++ b/news.html
@@ -169,8 +169,8 @@
                 <div class="row justify-content-md-center py-2">
                     <div class="col">
                         <p class="my-0" >Social Media</p>
-                        <a href="https://twitter.com/thekhronosgroup" class="fa fa-twitter text-light"></a>
-                        <a href="#" class="fa fa-youtube text-light"></a>
+                        <a href="https://twitter.com/thekhronosgroup" class="m-2 fa fa-twitter p-3 bg-dark text-light"></a>
+                        <a href="https://www.youtube.com/user/khronosgroup" class="m-2 fa fa-youtube p-3 bg-dark text-light"></a>
                     </div>
 
                     <div class="col mb-3">
@@ -180,7 +180,7 @@
                             <li class="nav-item"><a href="index.html" class="text-muted">Home</a></li>
                             <li class="nav-item"><a href="about.html" class="text-muted">About</a></li>
                             <li class="nav-item"><a href="#" class="text-muted">Resources</a>
-                                <ul class="navbar-nav ml-3">
+                                <ul class="navbar-nav ">
                                     <li class="nav-item"><a href="pipeline.html" class="text-muted">OpenGL Rendering Pipeline</a>
                                     <li class="nav-item"><a href="glut.html" class="text-muted">OpenGL Utility Libraries</a>
                                     <li class="nav-item"><a href="perfbench.html" class="text-muted">OpenGL Performance Benchmarks</a>
