changed colors and spacing

--- a/faq.html
+++ b/faq.html
@@ -17,12 +17,12 @@
 
     <body>
         <header>
-            <nav id="nav_bar" class="navbar fixed-top navbar-light navbar-expand-md bg-light shadow-sm">
-                <a class="navbar-brand" href="#">
-                    <img src="img/Khronos_logo.svg" height="30" class="align-bottom">
+            <nav id="nav_bar" class="navbar fixed-top navbar-dark navbar-expand-md bg-dark text-light shadow-sm">
+                <a class="navbar-brand" href="index.html">
+                    <img src="img/khronos-logo-inverted.svg" height="40" class="align-bottom">
                 </a>
 
-                <button class="navbar-toggler bg-light navbar-light" type="button" data-toggle="collapse" data-target="#main-nav">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 
@@ -59,7 +59,7 @@
                     <img src="img/faq_bg.jpg" width="80%">
                 </center>
             </div>
-            <div class="container">
+            <div class="container mb-5">
                 <div class="accordion" id="faqAccordion">
                     
                         <div class="card">
