--- a/glut.html
+++ b/glut.html
@@ -12,17 +12,17 @@
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-        <title>Performance Benchmarks &mdash; OpenGL</title>
+        <title>Utility Libraries &mdash; OpenGL</title>
     </head>
 
     <body>
         <header>
-            <nav id="nav_bar" class="navbar fixed-top navbar-light navbar-expand-md bg-light shadow-sm">
-                <a class="navbar-brand" href="#">
-                    <img src="img/Khronos_logo.svg" height="30" class="align-bottom">
+            <nav id="nav_bar" class="navbar fixed-top navbar-dark navbar-expand-md bg-dark text-light shadow-sm">
+                <a class="navbar-brand" href="index.html">
+                    <img src="img/khronos-logo-inverted.svg" height="40" class="align-bottom">
                 </a>
 
-                <button class="navbar-toggler bg-light navbar-light" type="button" data-toggle="collapse" data-target="#main-nav">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 
