--- a/py/tmp_index.html
+++ b/py/tmp_index.html
@@ -5,7 +5,7 @@
         <title>Home &mdash; OpenGL</title>
     </head>
 
-    <body>
+    <body class="translucent-nav">
         {{ nav_tmp | indent(width = 8, first = False) }}
 
         <div class="jumbotron jumbo-bg text-light d-flex align-items-center justify-content-center mb-0 rounded-0">
