--- a/py/tmp_faq.html
+++ b/py/tmp_faq.html
@@ -19,7 +19,7 @@
                     <img src="img/faq_bg.jpg" width="80%">
                 </center>
             </div>
-            <div class="container">
+            <div class="container mb-5">
                 <div class="accordion" id="faqAccordion">
                     {% for faq in questions %}
                         <div class="card">
