--- a/py/tmp_index.html
+++ b/py/tmp_index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         {{ header_tmp | indent(width = 8, first = False) }}
-        <title>Home &mdash; OpenGL</title>
+        <title>Home &mdash; Khronos Group</title>
     </head>
 
     <body class="translucent-nav">
