--- a/pipeline.html
+++ b/pipeline.html
@@ -12,7 +12,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-        <title>The Rendering Pipeline &mdash; OpenGL</title>
+        <title>The Rendering Pipeline &mdash; Khronos Group</title>
     </head>
 
     <body>
