--- a/py/tmp_glut.html
+++ b/py/tmp_glut.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         {{ header_tmp | indent(width = 8, first = False) }}
-        <title>Utility Libraries &mdash; OpenGL</title>
+        <title>Utility Libraries &mdash; Khronos Group</title>
     </head>
 
     <body>
