changed faq link in contact page

--- a/py/tmp_contact.html
+++ b/py/tmp_contact.html
@@ -99,7 +99,7 @@
                                 <h3><strong>Technical Support</strong></h3>
                                 <p style="line-height: 2.0em">
                                 If you are looking for hardware that supports a specific Khronos standard such as <strong>OpenGL</strong>, 
-                                please refer to the <a href="faq.html">Frequently Asked Questions</a> page. On this page, choose the Khronos standard in which you are 
+                                please refer to the <a href="faq.html" target="_blank">Frequently Asked Questions</a> page. On this page, choose the Khronos standard in which you are 
                                 interested, then the page will list the products that have been verified to be conformant with that 
                                 standard. Questions about the hardware should be addressed to the hardware manufacturer.
                                 <br/><br/>
